--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <meta name="keywords" content="sushi, entradas, comida asiatica, woks, rolls, sushi bolws">
     <meta name="author" content="Mauricio Maldonado">
     <meta name="copyright" content="kanpeki.sushi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,900&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./estilos/estilo.css">
     <title>Kanpeki Sushi</title>
+    <link rel="icon" type="image/x-icon" href="/imagenes/favicon.png">
 </head>
 <body class="inicio-body">
     <!--inicio nav cuadriculado-->
@@ -23,32 +25,31 @@
             <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
             </div>
             <div id="entrada" class="boton">
-                <a href="./pages/woks.html">Entradas/Woks</a>
+                <a href="./pages/woks.html" class="animate__animated animate__backInLeft">Entradas/Woks</a>
             </div>
-            <div id="woks" class="boton">
-                <a href="./pages/sushi.html">Sushi & Bowls</a>
+            <div id="woks" class="boton" >
+                <a href="./pages/sushi.html" class="animate__animated animate__backInLeft">Sushi & Bowls</a>
             </div>
             <div id="sushi" class="boton">
-                <a href="./pages/rolls.html">Rolls</a>
+                <a href="./pages/rolls.html" class="animate__animated animate__backInLeft">Rolls</a>
             </div>
             <div id="contacto" class="boton">
-                <a href="./pages/contacto.html">Conocenos</a>
+                <a href="./pages/contacto.html" class="animate__animated animate__backInLeft">Conocenos</a>
             </div>
         </div>
     </main>
     <!--fin de nav cuadriculado-->
     <footer class="foot">
         <div class="redes">
-            <h3 >Redes Sociales</h3>
-            <ul>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-solid fa-mobile-retro"></i></li>
-                <li><i class="fa-brands fa-facebook"></i></li>
+            <h3>Comunicate con nosotros!!</h3>
+            <ul class="iconos-redes">
+                <li class="instagram"> <a href="https://www.instagram.com/kanpeki.sushi/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><i class="fa-solid fa-mobile-retro"></i> <pre> 4105741/433720</pre> </li>
+                <li class="instagram"> <a href="https://m.me/Kanpeki.Sushi.AsianFood" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
             </ul>
         </div>    
-        <div class="zona">
-            <h3>Velez Sarfield 792</h3>
-            <p>Río Tercero,Córdoba,Argentina</p>
+        <div id="logo_foot"> 
+                <img src="./imagenes/KPK LOGO 2022-34.png" alt="logo">
         </div>
     </footer>
 </body>
