--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="sushi, take away, delivery, local de comida, comida asiática">
     <meta name="author" content="Mauricio Maldonado">
     <meta name="copyright" content="kanpeki.sushi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
     <title>Conocenos</title>
+    <link rel="icon" type="image/x-icon" href="../imagenes/favicon.png">
 </head>
 <body class="body-menu" id="menu_conocenos">
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v16.0" nonce="W4G5LVSo"></script>
     <header>
 <!--inicio barra nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,48 +47,64 @@
         </nav>
 <!--fin barra nav-->
     <a href="#inicio_contacto" class="boton_flotante" id="boton_conocenos"><img src="../imagenes/gatito.png" alt="gatito"></a>
+<!--fin boton flotante-->
     </header>
-    <main class="menu-main">
-        <div class="menu-carta">
-            <div class="menu-titulo" id="conocenos">
-            <h2>Conocenos</h2>
+    <main class="main_forma">
+        <section class="menu-main">
+            <div class="menu-carta">
+                <div class="menu-titulo" id="conocenos">
+                    <h2 class="animate__animated animate__tada">Conocenos...</h2>
+                </div>
             </div>
-        </div>
-        <div>
-            <video width="100%" height="550" controls>
-                <source src="../imagenes/videokanpeki.mp4" type="video/mp4">
-            </video>
-        </div>
+            <div>
+                <video width="100%" height="100%" autoplay muted>
+                    <source src="../imagenes/videokanpeki.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="icon">
+                        <svg viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M11.984 16.815c2.596 0 4.706-2.111 4.706-4.707 0-1.409-.623-2.674-1.606-3.538-.346-.303-.735-.556-1.158-.748-.593-.27-1.249-.421-1.941-.421s-1.349.151-1.941.421c-.424.194-.814.447-1.158.749-.985.864-1.608 2.129-1.608 3.538 0 2.595 2.112 4.706 4.706 4.706zm.016-8.184c1.921 0 3.479 1.557 3.479 3.478 0 1.921-1.558 3.479-3.479 3.479s-3.479-1.557-3.479-3.479c0-1.921 1.558-3.478 3.479-3.478zm5.223.369h6.777v10.278c0 2.608-2.114 4.722-4.722 4.722h-14.493c-2.608 0-4.785-2.114-4.785-4.722v-10.278h6.747c-.544.913-.872 1.969-.872 3.109 0 3.374 2.735 6.109 6.109 6.109s6.109-2.735 6.109-6.109c.001-1.14-.327-2.196-.87-3.109zm2.055-9h-12.278v5h-1v-5h-1v5h-1v-4.923c-.346.057-.682.143-1 .27v4.653h-1v-4.102c-1.202.857-2 2.246-2 3.824v3.278h7.473c1.167-1.282 2.798-2 4.511-2 1.722 0 3.351.725 4.511 2h7.505v-3.278c0-2.608-2.114-4.722-4.722-4.722zm2.722 5.265c0 .406-.333.735-.745.735h-2.511c-.411 0-.744-.329-.744-.735v-2.53c0-.406.333-.735.744-.735h2.511c.412 0 .745.329.745.735v2.53z"></path>
+                        </svg>
+                    </div>
+                    <strong> Instagram </strong>
+                    <div class="card__body">
+                        dale click y seguinos❤.
+                    </div>
+                    <a href="https://www.instagram.com/kanpeki.sushi/" target="_blank"> <span>@kanpeki.sushi</span></a>
+                </div>
+        </section>
         <section class="menu-main">
             <div class="menu-carta">
                 <div class="menu-titulo">
-                <h2>Kanpeki</h2>
+                    <h2 class="animate__animated animate__tada"> Somos Kanpeki 🥢</h2>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A ea rem aspernatur ex, laboriosam fugit voluptate dicta sequi, atque quos laudantium qui sunt animi autem laborum tempore tenetur optio? Exercitationem!
-                    Hic minus delectus rerum ea distinctio, velit eos perspiciatis expedita recusandae quas praesentium voluptatum vero facilis quam sint quasi dolore maxime est earum amet quidem debitis. Dolores veritatis laboriosam exercitationem.
-                    Ut reprehenderit quos recusandae, quae nemo odit dolorem molestias ipsam expedita perspiciatis tempora odio? Ipsam iste nisi illum placeat ratione officiis amet vero, animi enim facere! Possimus eaque aliquam aut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, consequatur.</p>
+                    <div class="fb-page" data-href="https://www.facebook.com/Kanpeki.Sushi.AsianFood" data-tabs="timeline" data-width="500px" data-height="70px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Kanpeki.Sushi.AsianFood" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Kanpeki.Sushi.AsianFood">Kanpeki. Sushi &amp; Asian Food</a></blockquote></div>
+                </div>
+                    <div id="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13508.809731861107!2d-64.11233615!3d-32.1718155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd6f36ca7b093f%3A0x5597139df2532088!2sKanpeki%20Sushi%20y%20Asian%20Food!5e0!3m2!1ses!2sar!4v1675884346959!5m2!1ses!2sar" width="420" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
         </section>
-
-
+    </main>
 
 
 <!--inicio de footer-->
-    <footer class="foot" id="foot-wok">
-        <div class="redes">
-            <h3 >Redes Sociales</h3>
-            <ul>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-solid fa-mobile-retro"></i></li>
-                <li><i class="fa-brands fa-facebook"></i></li>
-            </ul>
-        </div>    
-        <div class="zona">
-            <h3>Velez Sarfield 792</h3>
-            <p>Río Tercero,Córdoba,Argentina</p>
-        </div>
-    </footer>
+<footer class="foot">
+    <div class="redes">
+        <h3>Comunicate con nosotros!!</h3>
+        <ul class="iconos-redes">
+            <li class="instagram"> <a href="https://www.instagram.com/kanpeki.sushi/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><i class="fa-solid fa-mobile-retro"></i> <pre> 4105741/433720</pre> </li>
+            <li class="instagram"> <a href="https://m.me/Kanpeki.Sushi.AsianFood" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </div>    
+    <div id="logo_foot"> 
+            <img src="../imagenes/KPK LOGO 2022-34.png" alt="logo">
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
