--- a/pages/rolls.html
+++ b/pages/rolls.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="roles, nigiris, tamago, mousse roll, kanikama, salmón crudo, langostinos, sashimi, geishas">
     <meta name="author" content="Mauricio Maldonado">
     <meta name="copyright" content="kanpeki.sushi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
     <title>Rolls & Piezas especiales</title>
+    <link rel="icon" type="image/x-icon" href="../imagenes/favicon.png">
 </head>
 <body class="body-menu" id="body_rolls">
     <header>
@@ -44,107 +46,111 @@
 <!--fin barra nav-->
     <a href="#rolls" class="boton_flotante" id="boton_sushi"><img src="../imagenes/sushi.png" alt="sushi"></a>
     </header>
-        <main class="menu-main">
-            <div class="menu-carta" id="menu_rolls">
-                <div class="menu-titulo">
-                    <h2> <pre>Sushi Rolls x9u.</pre></h2>
+        <main class="main_forma">
+            <section class="menu-main">
+                <div class="menu-carta" id="menu_rolls" >
+                    <div class="menu-titulo">
+                        <h2 class="animate__animated animate__backInLeft"><pre>Sushi Rolls x9u.   </pre></h2>
+                    </div>
+                    <div><b>New York roll,</b> salmón fresco, pepino, palta y sésamo negro por fuera.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>California roll,</b> kanikama, pepino, palta, queso y sésamo blanco por fuera.</div>
+                    <div class="precio">$1800</div>
+                    <div><b>SPF roll,</b> maki por fuera, salmón ahumado, palta y queso.</div>
+                    <div class="precio">$2000</div>
+                    <div><b>Buenos Aires roll,</b> salmón, palta, queso y salsa Buenos Aires.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Ebi roll,</b> langos apanados en panko, palta, queso y mayo siracha por fuera.</div>
+                    <div class="precio">$1850</div>
+                    <div><b>Veggie roll,</b> hongos, zanahoria, palta, queso y tamago.</div>
+                    <div class="precio">$1800</div>
+                    <div><b>King salmon roll,</b> salmón en panko, con mango, palta, ciboulette y salsa teriyaki.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Mango roll,</b> salmón, mango, queso y sésamo negro por fuera.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Phila roll,</b> salmón y phila con sésamo negro por fuera.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Ebi orange roll,</b> langos, palta, queso y salmón por fuera con ralladura de cítricos.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Ebi maki roll,</b> langos, palta, zanahoria, verdeo, queso y salmón por fuera.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Ebi crazy roll,</b> langos, palta, queso, salmón cocido por fuera con togarashi y salsa maracuyá.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Spicy tamago roll,</b> tamago, palta, queso con una cobertura de salmón y mayo de wasabi. </div>
+                    <div class="precio">$1900</div>
+                    <div><b>Mex roll,</b> salmón, queso, verdeo, guacamole y mermelada de rocoto.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>Futurama roll,</b> langos, queso saborizado con miso y cebolla de verdeo, con salsa de mostaza y miel por fuera.</div>
+                    <div class="precio">$1850</div>
+                    <div><b>Mousse roll,</b> salmón cocido, cebolla de verdeo y morada, cream chesse, con una lluvia de batatas fritas por fuera.</div>
+                    <div class="precio">$1700</div>
+                    <div><b>Pico de gallo roll,</b> langos, zanahoria, palta, queso con salsa de pico de gallo con mango y batatas fritas por fuera.    </div>
+                    <div class="precio">$1850</div>
+                    <div><b>Avocado roll,</b> langos apanados, queso crema y verdeo, palta por fuera con mayo togarashi.</div>
+                    <div class="precio">$1850</div>
+                    <div><b>Ebi lime,</b> langos apanados, pepino y palta. Por fuera una lámina de salmón y lima.</div>
+                    <div class="precio">$1900</div>
+                    <div><b>California mousse,</b> kanikama, queso crema, verdeo y pepino.</div>
+                    <div class="precio">$1800</div>
+                    <div><b>King cheese,</b> salmón apanado, queso crema y palta.</div>
+                    <div class="precio">$1900</div>
+                    <div class="hot_roll"><b>Hot roll 🔥,</b> elegí el rol que te guste y lo apanamos.</div>
+                    <div class="precio">$250</div>
+                    </div>
                 </div>
-                <div><b>New York roll,</b> salmón fresco, pepino y palta.</div>
-                <div class="precio">$1900</div>
-                <div><b>California roll,</b> kanikama, pepino, palta y queso.</div>
-                <div class="precio">$1800</div>
-                <div><b>SPF roll,</b> salmón ahumado, palta y queso.</div>
-                <div class="precio">$2000</div>
-                <div><b>Buenos Aires roll,</b> salmón, palta, queso y salsa Buenos Aires.</div>
-                <div class="precio">$1900</div>
-                <div><b>Ebi roll,</b> langos apanados en panko, palta, queso y mayo siracha por fuera.</div>
-                <div class="precio">$1850</div>
-                <div><b>Veggie roll,</b> hongos, zanahoria, palta, queso y tamago.</div>
-                <div class="precio">$1800</div>
-                <div><b>King salmon roll,</b> salmón en panko, con mango, palta, ciboulette y salsa teriyaki.</div>
-                <div class="precio">$1900</div>
-                <div><b>Mango roll,</b> salmón, mango, queso y sésamo negro por fuera.</div>
-                <div class="precio">$1900</div>
-                <div><b>Phila roll,</b> salmón y phila con sésamo negro por fuera.</div>
-                <div class="precio">$1900</div>
-                <div><b>Ebi orange roll,</b> langos, palta, queso y salmón por fuera con ralladura de cítricos.</div>
-                <div class="precio">$1900</div>
-                <div><b>Ebi maki roll,</b> langos, palta, zanahoria, verdeo, queso y salmón por fuera.</div>
-                <div class="precio">$1900</div>
-                <div><b>Ebi crazy roll,</b> langos, palta, queso, salmón cocido por fuera con togarashi y salsa maracuyá.</div>
-                <div class="precio">$1900</div>
-                <div><b>Spicy tamago roll,</b> tamago, palta, queso con una cobertura de salmón y mayo de wasabi. </div>
-                <div class="precio">$1900</div>
-                <div><b>Mex roll,</b> salmón, queso, verdeo, guacamole y mermelada de rocoto.</div>
-                <div class="precio">$1900</div>
-                <div><b>Futurama roll,</b> langos, queso saborizado con miso y cebolla de verdeo, con salsa de mostaza y miel por fuera.</div>
-                <div class="precio">$1850</div>
-                <div><b>Mousse roll,</b> salmón cocido, cebolla de verdeo y morada, cream chesse, con una lluvia de batatas fritas por fuera.</div>
-                <div class="precio">$1700</div>
-                <div><b>Pico de gallo roll,</b> langos, zanahoria, palta, queso con salsa de pico de gallo con mango y batatas fritas por fuera.</div>
-                <div class="precio">$1850</div>
-                <div><b>Avocado roll,</b> langos apanados, queso crema y verdeo, palta por fuera con mayo togarashi.</div>
-                <div class="precio">$1850</div>
-                <div><b>Ebi lime,</b> langos apanados, pepino y palta. Por fuera una lámina de salmón y lima.</div>
-                <div class="precio">$1900</div>
-                <div><b>California mousse,</b> kanikama, queso crema, verdeo y pepino.</div>
-                <div class="precio">$1800</div>
-                <div><b>King cheese,</b> salmón apanado, queso crema y palta.</div>
-                <div class="precio">$1900</div>
-                <div class="hot_roll"><b>Hot roll,</b> tu roll favorito apanado.</div>
-                <div class="precio">$250</div>
-            </div>
-        </div>
-    </main>
-
-    <section class="menu-main" >
-        <div class="menu-carta" id="menu_cinco">
-            <div class="menu-titulo" >
-                <h2><pre>Sushi Rolls x5u.</pre></h2>
-            </div>
-            <div><b>Tamago,</b> salmón, palta y queso.</div>
-            <div class="precio">$1000</div>
-            <div><b>Tamago salmón ahumado</b></div>
-            <div class="precio">$1100</div>
-            <div><b>Tamago king,</b> salmón apanado, palta y queso.</div>
-            <div class="precio">$1100</div>
-            <div><b>Tamago ebi,</b> langostinos apanados, palta y queso.</div>
-            <div class="precio">$1000</div>
-            <div><b>Tamago veggie,</b> hongos, zanahoria, verdeo, palta y queso.</div>
-            <div class="precio">$960</div>
-            <div><b>Placer real roll,</b> tamago, palta, phila, lámina de salmón por fuera con hilos de batata y salsa maracuya.</div>
-            <div class="precio">$1020</div>
-            <div><b>Geishas,</b> salmón, palta y queso o Salmón, mango y queso.</div>
-            <div class="precio">$1000</div>
-            <div><b>Geishas boom,</b> rellenas con queso saborizado con miso y verdeo, fritas en tempura.</div>
-            <div class="precio">$1020</div>
-            <div><b>Geishas spicy,</b> lámina de salmón, queso y salsa maracuya spicy.</div>
-            <div class="precio">$1000</div>
-            <div><b>Nigiris,</b> de salmón fresco.</div>
-            <div class="precio">$1000</div>
-            <div><b>Nigiris flambeados,</b> con mermelada de rocoto y verdeo.</div>
-            <div class="precio">$1020</div>
-            <div><b>Sashimi,</b> corte de salmón.</div>
-            <div class="precio">$1000</div>
-            <div class="salsa_wasabi"> <pre> <b>Salsa extra</b> <b>Wasabi extra</b> </pre> </div>
-            <div class="precio">$150-$130</div>
-        </div>
-    </section>
+            </section>
+            <section class="menu-main" >
+                <div class="menu-carta" id="menu_cinco">
+                    <div class="menu-titulo" >
+                        <h2 class="animate__animated animate__backInLeft"><pre>Sushi Rolls x5u.</pre></h2>
+                    </div>
+                    <div> <b>Tamago,</b> salmón, palta y queso. </div>
+                    <div class="precio"> $1000 </div>
+                    <div> <b>Tamago salmón ahumado</b> </div>
+                    <div class="precio"> $1100 </div>
+                    <div> <b>Tamago king,</b> salmón apanado, palta y queso. </div>
+                    <div class="precio"> $1100 </div>
+                    <div> <b>Tamago ebi,</b> langostinos apanados, palta y queso. </div>
+                    <div class="precio"> $1000 </div>
+                    <div> <b>Tamago veggie,</b> hongos, zanahoria, verdeo, palta y queso. </div>
+                    <div class="precio"> $960 </div>
+                    <div> <b>Placer real roll,</b> tamago, palta, phila, lámina de salmón por fuera con hilos de batata y salsa maracuya. </div>
+                    <div class="precio"> $1020 </div>
+                    <div> <b>Geishas,</b> salmón, palta y queso o Salmón, mango y queso. </div>
+                    <div class="precio"> $1000 </div>
+                    <div> <b>Geishas boom,</b> rellenas con queso saborizado con miso y verdeo, fritas en tempura. </div>
+                    <div class="precio"> $1020 </div>
+                    <div> <b>Geishas spicy,</b> lámina de salmón, queso y salsa maracuya spicy. </div>
+                    <div class="precio"> $1000 </div>
+                    <div> <b>Nigiris,</b> de salmón fresco. </div>
+                    <div class="precio"> $1000 </div>
+                    <div> <b>Nigiris flambeados,</b> con mermelada de rocoto y verdeo. </div>
+                    <div class="precio"> $1020 </div>
+                    <div> <b>Sashimi,</b> corte de salmón. </div>
+                    <div class="precio"> $1000 </div>
+                    <div class="salsa_wasabi"> <pre> <b>Salsa extra</b>  <b>Wasabi extra</b> </pre> </div>
+                    <div class="precio2"> <pre> $150 - $130 </pre> </div>
+                    <div class="imagen_rol">
+                    <img src="/imagenes/roles1.jpg" alt="roles">
+                    </div>
+                </div>
+            </section>
+        </main>
+        
 <!--inicio de footer-->
-    <footer class="foot" id="foot-wok">
-        <div class="redes">
-            <h3 >Redes Sociales</h3>
-            <ul>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-solid fa-mobile-retro"></i></li>
-                <li><i class="fa-brands fa-facebook"></i></li>
-            </ul>
-        </div>    
-        <div class="zona">
-            <h3>Velez Sarfield 792</h3>
-            <p>Río Tercero,Córdoba,Argentina</p>
-        </div>
-    </footer>
+<footer class="foot">
+    <div class="redes">
+        <h3>Comunicate con nosotros!!</h3>
+        <ul class="iconos-redes">
+            <li class="instagram"> <a href="https://www.instagram.com/kanpeki.sushi/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><i class="fa-solid fa-mobile-retro"></i> <pre> 4105741/433720</pre> </li>
+            <li class="instagram"> <a href="https://m.me/Kanpeki.Sushi.AsianFood" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </div>    
+    <div id="logo_foot"> 
+            <img src="../imagenes/KPK LOGO 2022-34.png" alt="logo">
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
