--- a/pages/woks.html
+++ b/pages/woks.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="empanadas chinas, langostinos apanados, gyozas, ravioles de salmón, woks, arroz frito, chop suey, chow fan, chow mein">
     <meta name="author" content="Mauricio Maldonado">
     <meta name="copyright" content="kanpeki.sushi">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
     <title>Entradas & Woks</title>
+    <link rel="icon" type="image/x-icon" href="../imagenes/favicon.png">
 </head>
-<body class="body-menu">
+<body class="body-menu" id="body_wok">
     <!--inicio barra nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#" id="entrada"><img src="../imagenes/logo.png" alt="logo"></a>
@@ -44,10 +46,11 @@
       <!--Boton flotante-->
       <a href="#entrada" class="boton_flotante"><img src="../imagenes/fuego.png" alt="fuego"></a>
       <!--inicio main-->
-      <main class="menu-main" >
-        <div class="menu-carta">
+      <main class="main_forma" >
+        <section class="menu-main" >
+        <div class="menu-carta" >
             <div class="menu-titulo">
-                <h2 >Entradas</h2>
+                <h2 class="animate__animated animate__backInUp">Entradas</h2>
             </div>
             <div>
                 <div class="entrada_menu"> 
@@ -72,12 +75,11 @@
                     <div class="precio">$550</div>
                 </div>
             </div>
-            <div>
-      </main>
+            </section>
       <section class="menu-main">
           <div class="menu-carta">
             <div class="menu-titulo">
-              <h2>Deliwoks</h2>
+              <h2 class="animate__animated animate__backInUp">Deliwoks</h2>
             </div>
             <div class="wok-p">
                 <div id="arroz"> <b>Arroz frito,</b> con verdeo,zanahoria, huevo y jamón.</div>
@@ -101,20 +103,21 @@
             </div>
           </div>
       </section>
+      </main>
+      
       
       <!--inicio de footer-->
-      <footer class="foot" id="foot-wok">
+      <footer class="foot">
         <div class="redes">
-            <h3 >Redes Sociales</h3>
-            <ul>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-solid fa-mobile-retro"></i></li>
-                <li><i class="fa-brands fa-facebook"></i></li>
+            <h3>Comunicate con nosotros!!</h3>
+            <ul class="iconos-redes">
+                <li class="instagram"> <a href="https://www.instagram.com/kanpeki.sushi/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><i class="fa-solid fa-mobile-retro"></i> <pre> 4105741/433720</pre> </li>
+                <li class="instagram"> <a href="https://m.me/Kanpeki.Sushi.AsianFood" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
             </ul>
         </div>    
-        <div class="zona">
-            <h3>Velez Sarfield 792</h3>
-            <p>Río Tercero,Córdoba,Argentina</p>
+        <div id="logo_foot"> 
+                <img src="../imagenes/KPK LOGO 2022-34.png" alt="logo">
         </div>
     </footer>
 
